RESOLVED FIXED60734
[chromium] show-composited-layer-tree crashes on null ptr deref
https://bugs.webkit.org/show_bug.cgi?id=60734
Summary [chromium] show-composited-layer-tree crashes on null ptr deref
Adrienne Walker
Reported 2011-05-12 16:05:14 PDT
[chromium] show-composited-layer-tree crashes on null ptr deref
Attachments
Patch (1.50 KB, patch)
2011-05-12 16:06 PDT, Adrienne Walker
jamesr: review+
Adrienne Walker
Comment 1 2011-05-12 16:06:46 PDT
Nat Duca
Comment 2 2011-05-12 16:10:14 PDT
Comment on attachment 93362 [details] Patch Nice. :) Thanks enne.
James Robinson
Comment 3 2011-05-12 16:15:26 PDT
Comment on attachment 93362 [details] Patch (!m_tiler || m_tiler->skipsDraw()) is terser I think I've had this patch applied locally for a few days and haven't got around to upstreaming it :(.
Adrienne Walker
Comment 4 2011-05-12 16:27:41 PDT
Note You need to log in before you can comment on or make changes to this bug.