2011-05-12  Adrienne Walker  <enne@google.com>

Reviewed by James Robinson.

        [chromium] show-composited-layer-tree crashes on null ptr deref
        https://bugs.webkit.org/show_bug.cgi?id=60734

        The tiler is created lazily, so it won't not be around for the first
        dumpLayerProperties call.

        * platform/graphics/chromium/ContentLayerChromium.cpp:
        (WebCore::ContentLayerChromium::dumpLayerProperties):

Canonical link: https://commits.webkit.org/76050@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86394 268f45cc-cd09-0410-ab3c-d52691b4dbfc